--- a/src/Hero.css
+++ b/src/Hero.css
@@ -56,15 +56,16 @@
     flex-direction: column; /* stack text on top for smaller screens */
     text-align: center;
     padding: 20px;
-    min-height: 120vh;
+    min-height: 70vh;
     justify-content: center;
-    background-size: contain !important;
+    background-size: cover !important;
 margin-top: -90%;
   }
 
   .hero__content {
     max-width: 90%;
     margin-left: 0;
+    margin-top: 100%;
   }
 
   .hero__title {
