--- a/src/SpecialCard.css
+++ b/src/SpecialCard.css
@@ -80,6 +80,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-right: 10%;
 }
 
 .special-card__content li {
@@ -211,21 +212,25 @@
 
   /* Logo smaller and centered */
   .special-card__logo img {
-    width: 120px;
+    width: 150px;
     margin: 0 auto 15px auto;
     display: block;
     margin-right: 0;
-    margin-top: 0;
+    margin-top: 50%;
   }
 
   /* Content adjustments */
   .special-card__content {
     text-align: center;
+    margin-left: 40%;
+    margin-top: -33%;
   }
 
   .special-card__content h2 {
     font-size: 18px;
     margin-bottom: 10px;
+    margin-right: 10%;
+    display: none;
   }
 
   .special-card__offer {
@@ -239,13 +244,14 @@
 
   /* Score and tooltip center below content */
   .special-card__score {
-    margin: 15px 0;
+    margin: 15px 50px;
     margin-right: 0;
   }
 
   .tooltips-container {
-    margin-top: 10px;
+    margin-top: -15%  !important;
     text-align: center;
+    margin-left: 60%;
   }
 
   /* Tooltip adjustments */
